--- a/css/about.css
+++ b/css/about.css
@@ -378,6 +378,9 @@ footer {
     .about-page-container p{
       font-size: 20px;
     }
+    .about-text-container p{
+      font-size: 15px;
+    }
   }
   
   @media screen and (max-width: 340px) {
